--- a/src/drive/targets/browser/index.ejs
+++ b/src/drive/targets/browser/index.ejs
@@ -31,10 +31,10 @@
     <link rel="stylesheet" href="<%- file %>" />
     <% }); %>
   </head>
-  <div
-    role="application"
-    data-cozy="{{.CozyData}}"
-  ></div>
+  <body class="has-banner">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root" data-cozy="{{.CozyData}}"></div>
+  </body>
   <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %>
   <script src="<%- file %>"></script>
   <% }); %>
